hooks/echo-server/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server-nginx-ingress
  namespace: echo-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - echo.cfv3.org
      secretName: echo-server-ssl-secret
  rules:
    - host: echo.cfv3.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo-echo-server
                port:
                  number: 80
